Fix: menu item alignment on linux - Bug #97984 r=toddw rn=
(integrated from komodo (trunk) change 77871 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@12234 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons.less
+++ b/src/chrome/komodo/skin/plat/shared/icons.less
@@ -38,10 +38,9 @@ button, toolbarbutton, menuitem
     }
 }
 
-/* Allow the icons in menus to determine for themselves what size they require */
+/* Allow the icons in menus to determine for themselves what height they require */
 .menu-iconic-icon
 {
-    width: auto;
     height: auto;
 }
 
